--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,50 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <RelativeLayout
+            android:id="@+id/searchLyt"
+            android:layout_alignParentTop="true"
+            android:background="@drawable/edit_text_square"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp">
+
+            <AutoCompleteTextView
+                android:id="@+id/searchEdt"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@android:color/transparent"
+                android:textColorHint="@android:color/darker_gray"
+                android:hint="@string/hint_search_film"
+                android:imeOptions="actionDone"
+                android:inputType="text"
+                tools:ignore="Autofill,LabelFor"/>
+
+            <LinearLayout
+                android:id="@+id/searchDrawableLyt"
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true">
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/searchDrawable"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/ic_search"
+                    android:tint="@android:color/darker_gray"
+                    android:tintMode="src_in"/>
+            </LinearLayout>
+        </RelativeLayout>
+
         <androidx.recyclerview.widget.RecyclerView
+            android:layout_below="@+id/searchLyt"
             android:id="@+id/rvListFilm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
