--- a/app/src/main/res/layout/activity_favorites.xml
+++ b/app/src/main/res/layout/activity_favorites.xml
@@ -12,50 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <RelativeLayout
-            android:id="@+id/searchLyt"
-            android:layout_alignParentTop="true"
-            android:background="@drawable/edit_text_square"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp">
-
-            <AutoCompleteTextView
-                android:id="@+id/searchEdt"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@android:color/transparent"
-                android:textColorHint="@android:color/darker_gray"
-                android:hint="@string/hint_search_film"
-                android:imeOptions="actionDone"
-                android:inputType="text"
-                tools:ignore="Autofill,LabelFor"/>
-
-            <LinearLayout
-                android:id="@+id/searchDrawableLyt"
-                android:layout_width="50dp"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true">
-
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/searchDrawable"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:src="@drawable/ic_search"
-                    android:tint="@android:color/darker_gray"
-                    android:tintMode="src_in"/>
-            </LinearLayout>
-        </RelativeLayout>
-
         <androidx.recyclerview.widget.RecyclerView
-            android:layout_below="@+id/searchLyt"
             android:id="@+id/rvListFilm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -82,7 +39,7 @@
                 android:layout_centerInParent="true"
                 android:layout_marginTop="10dp"
                 android:gravity="center"
-                android:text="@string/failed_connect"
+                android:text="@string/empty_list"
                 android:textSize="16sp" />
 
             <Button
@@ -95,11 +52,5 @@
                 android:text="@string/label_refresh"
                 android:textColor="@android:color/white" />
         </RelativeLayout>
-        <com.facebook.shimmer.ShimmerFrameLayout
-            android:id="@+id/shimmerLyt"
-            android:layout_below="@+id/searchLyt"
-            android:background="@android:color/darker_gray"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
     </RelativeLayout>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
